# Laboratorio-de-Programacion

./: CMakeLists.txt  Dockerfile  README.md  gitlab-ci.yml
include/: RBT.h
src/: CMakeLists.txt  RBTRemove.cpp  RBTcreate.cpp  RBTdelete.cpp  RBTget.cpp  RBTinsert.cpp  RBTnode_add_fix.cpp  RBTprint.cpp  RBTrotations.cpp  exe  insert.cpp  main.cpp
test/: CMakeLists.txt  tests.cpp
